
  [Jeremy Kemper]

* Add first_or_create, first_or_create!, first_or_initialize methods to Active Record. This is a
  better approach over the old find_or_create_by dynamic methods because it's clearer which
  arguments are used to find the record and which are used to create it:

    User.where(:first_name => "Scarlett").first_or_create!(:last_name => "Johansson")

  [Andrés Mejía]

*Rails 3.1.1 (October 7, 2011)*

* Add deprecation for the preload_associations method. Fixes #3022.

  [Jon Leighton]

* Don't require a DB connection when loading a model that uses set_primary_key. GH #2807.

  [Jon Leighton]

* Fix using select() with a habtm association, e.g. Person.friends.select(:name). GH #3030 and
  #2923.

  [Hendy Tanata]

* Fix belongs_to polymorphic with custom primary key on target. GH #3104.

  [Jon Leighton]

* CollectionProxy#replace should change the DB records rather than just mutating the array.
  Fixes #3020.

  [Jon Leighton]

* LRU cache in mysql and sqlite are now per-process caches.

	* lib/active_record/connection_adapters/mysql_adapter.rb: LRU cache
	  keys are per process id.
	* lib/active_record/connection_adapters/sqlite_adapter.rb: ditto

  [Aaron Patterson]

* Support bulk change_table in mysql2 adapter, as well as the mysql one. [Jon Leighton]

* If multiple parameters are sent representing a date, and some are blank, the
resulting object is nil. In previous releases those values defaulted to 1. This
only affects existing but blank parameters, missing ones still raise an error.
[Akira Matsuda]

* ActiveRecord::Base.establish_connection now takes a string that contains
a URI that specifies the connection configuration.  For example:

    ActiveRecord::Base.establish_connection 'postgres://localhost/foo'

* Active Record's dynamic finder will now raise the error if you passing in less number of arguments than what you call in method signature.

  So if you were doing this and expecting the second argument to be nil:
