@@ -29,6 +29,11 @@
 
   [Andrés Mejía]
 
+* Fix nested attributes bug where _destroy parameter is taken into account
+  during :reject_if => :all_blank (fixes #2937)
+
+  [Aaron Christy]
+
 *Rails 3.1.1 (October 7, 2011)*
 
 * Add deprecation for the preload_associations method. Fixes #3022.
